--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ DerivedData/
 *.ipa
 *.dSYM.zip
 *.dSYM
+*.xcresult
+SourcePackages/
 
 # Swift Package Manager
 .build/
@@ -40,4 +42,3 @@ npm-debug.log*
 # Temporary files
 *.tmp
 *.temp
-
