Implement persistent Live Activity with premium UI, background lifecycle management, and multi-model mute support

--- a/VoiceModeWebRTCSwift/Info.plist
+++ b/VoiceModeWebRTCSwift/Info.plist
@@ -30,5 +30,7 @@
 	<string>Jarvis needs notification access to help manage alarms and reminders.</string>
 	<key>NSIntentsUsageDescription</key>
 	<string>Jarvis needs access to run iOS Shortcuts and integrate with system features.</string>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 </dict>
 </plist>
